# GitCloneCLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/app/: app.py
src/app/commands/: clone.py  test.py
src/data/: urls.txt
src/tests/: test_app.py  test_clone.py  test_test.py
