# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-clone"
version = "1.0.0"
authors = [
  { name="mek0124", email="mek0124@proton.me" },
]
description = "A CLI tool for cloning multiple Git repositories at once"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "click>=8.2.0"
]

[project.scripts]
git-clone = "app.app:app"
